2015-04-25  Jiang Jiang  <gzjjgod@gmail.com>

	* cff_dict.c: Be more permissive in CFF dict parsing, fix Yuppy SC
	and Yuppy TC fonts support.

2015-04-25  Jiang Jiang  <gzjjgod@gmail.com>

	* sfnt.c: Fix Mac TrueType font support.
	  bug found by Richard Koch <richardmoncriefkoch@icloud.com>.

2015-04-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvi.c, tt_cmap.c: Fixed a dfont bug, from Akira,
	  bug found by Dohyun Kim <nomosnomos@gmail.com>.

2015-04-19  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: Ask libpng to do gamma correction with assumed
	screen gamma 2.2.

2015-04-12  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pdfobj.c:  Fix some problems in reading cross-reference streams.
	* pngimage.c: Support PNG gAMA chunk.
	* jpegimage.c: Various fixes in handling JPEG Exif data
	(possible overflow and buffer overrun), adjusting indent and spaces.
	* jp2image.c: JPEG2000 opacity channel support.
	* pdfcolor.c: Update for PDF 1.7 in pdfcolor.c.

2015-04-05  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* pngimage.c: XMP Metadata support for PNG images.

2015-03-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mfileio.[ch]: Use mfgets() parameters as for fgets().

2015-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bmpimage.c, dpxcrypt.c, dvi.c, fontmap.[ch], jpegimage.c,
	pdfcolor.[ch], pdfdev.[ch], pdfdoc.c, pdfdraw.c, spc_tpic.c,
	spc_util.c, spc_xtx.c, xbb.c: Copyright "2014" => "2015".

2015-03-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* dvipdfmx.c: Change "Copyright (C) 2002-2014" to
	"Copyright (C) 2002-2015".

2015-03-17  Khaled Hosny  <khaledhosny@eglug.org>

	* pdfcolor.c, pdfcolor.h, pdfdoc.c, pdfdraw.c, spc_util.c: Add spot
	colors support, based on patch by Apostolos Syropoulos.

2015-03-15  Khaled Hosny  <khaledhosny@eglug.org>

	* tests/*.{bb,xbb}: Update version number.

2015-03-15  Karl Berry  <karl@tug.org>

	* configure.ac: version 20150315 for TL'15.

2015-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
